ML_Ops_assignment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  namespace: heart-disease
  labels:
    app: heart-disease-api
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
